docs/version-1.17/modules/en/pages/tutorials/writing-policies/rego/open-policy-agent/05-raw-policies.adoc
= Writing raw policies
:description: Writing raw OPA policies for Kubewarden.
:doc-persona: ["kubewarden-policy-developer"]
:doc-topic: ["writing-policies", "rego", "open-policy-agent", "raw-policies"]
:doc-type: ["tutorial"]
:keywords: ["kubewarden", "kubernetes", "raw policies", "open policy agent", "opa", "rego"]
:sidebar_label: Raw policies
:current-version: {page-origin-branch}

Raw policies are policies that can evaluate arbitrary JSON documents.
For more information about raw policies, please refer to the
xref:howtos/raw-policies.adoc[raw policies] page.

== Example

The following examples should look familiar if you completed the
xref:tutorials/writing-policies/rego/open-policy-agent/02-create-policy.adoc[validation] page of this tutorial.

[NOTE]
====
Remember to mark the policy as `raw`,
by using the `policyType` field in the `metadata.yml` configuration.
Please refer to the
xref:tutorials/writing-policies//metadata.adoc[metadata]
specification for more information.
====


=== Validation

You're going to write a policy that accepts a request in the following format:

[subs="+attributes",json]
----
{
  "request": {
    "user": "alice",
    "action": "read",
    "resource": "products"
  }
}
----

It validates that only the `admin` user can delete resources.

Start by scaffolding a policy by using the
https://github.com/kubewarden/opa-policy-template[OPA policy template].

First you need to change the `policy.rego` file to look like this:

[,rego]
----
package validation

deny[msg] {
    input.request.action == "delete"
    input.request.user != "admin"
    msg := sprintf("user %v is not allowed to delete resources", [input.request.user])
}
----

The `utility/policy.rego` module must needs modification to remove Kubernetes-specific code:

[,rego]
----
package policy

import data.validation

main = {
	"response": response,
}

// highlight-start
# OPA policy responses need the uid field to be set.
# If the request doesn't contain a uid, set it to an empty string.
default uid = ""

uid = input.request.uid
// highlight-end

response = {
	"uid": uid,
	"allowed": false,
	"status": {"message": reason},
} {
	reason = concat(", ", validation.deny)
	reason != ""
} else = {
	"uid": uid,
	"allowed": true,
} {
	true
}
----
